fixed alignment of vote count

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -22,6 +22,10 @@
   color: red;
 }
 
+.vote-count {
+  padding-left: 8px;
+}
+
 div.hero-body {
   background-image: url('https://farm5.staticflickr.com/4759/39952554431_e872ce68b1_h.jpg');
   background-position: center;
